done README.md, resolved whitespace quote issue

--- a/archive/css/styles.css
+++ b/archive/css/styles.css
@@ -58,6 +58,7 @@ h2, h3, #audio h4 {
     margin-top: 1em;
     background-color: rgba(209, 229, 250);
     color: rgb(40, 60, 100);
+    z-index: 1;
 }
 
 .footer>a {
